--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="img/favicon.ico">
 
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.min.css">
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
   <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
@@ -37,73 +37,57 @@
             <th></th>
           </tr>
         </thead>
-        <tbody id="tbody">
-          <!--
-          <tr>
-          <td>#12</td>
-          <td>Fiat</td>
-          <td>Uno</td>
-          <td>2015</td>
-          <td>
-          <a href="#" class="btn btn-outline-warning"><img src="img/icon/edit.png" alt="Edit" class="link-icon"></a>
-          <a href="#" class="btn btn-outline-danger"><img src="img/icon/delete.png" alt="Delete" class="link-icon"></a>
-        </td>
-      </tr>
-    -->
-  </tbody>
-</table>
-</div>
-</div>
-
-<!--BEGIN MODAL ADD OR EDIT-->
-<div class="modal fade" id="modalCar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <form id="frmCarro" method="post">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div class="row">
-            <div class="col-md-4">
-              <label for="txtMarca">Marca</label>
-              <input type="hidden" id="txtId" value="">
-              <input type="text" id="txtMarca" class="form-control" value="">
-            </div>
-            <div class="col-md-4">
-              <label for="txtMarca">Modelo</label>
-              <input type="text" id="txtModelo" class="form-control" value="">
-            </div>
-            <div class="col-md-4">
-              <label for="txtMarca">Ano</label>
-              <select class="form-control" id="slAno"></select>
-            </div>
-          </div>
-
-          <div class="row mt-3">
-            <div class="col">
-              <div id="dvAlert" class="alert alert-info"></div>
-            </div>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-          <button type="submit" class="btn btn-primary">Salvar</button>
-        </div>
-      </div>
-    </form>
+        <tbody id="tbody"></tbody>
+      </table>
+    </div>
   </div>
-</div>
-<!--END MODAL ADD OR EDIT-->
 
+  <!--BEGIN MODAL ADD OR EDIT-->
+  <div class="modal fade" id="modalCar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <form id="frmCarro" method="post">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <label for="txtMarca">Marca</label>
+                <input type="hidden" id="txtId" value="">
+                <input type="text" id="txtMarca" class="form-control" value="">
+              </div>
+              <div class="col-md-4">
+                <label for="txtMarca">Modelo</label>
+                <input type="text" id="txtModelo" class="form-control" value="">
+              </div>
+              <div class="col-md-4">
+                <label for="txtMarca">Ano</label>
+                <select class="form-control" id="slAno"></select>
+              </div>
+            </div>
 
-<script src="js/jquery-3.4.1.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
+            <div class="row mt-3">
+              <div class="col">
+                <div id="dvAlert" class="alert alert-info"></div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+            <button type="submit" class="btn btn-primary">Salvar</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+  <!--END MODAL ADD OR EDIT-->
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/main.min.js"></script>
 </body>
-
 </html>
